sandbox/output
StingCalculatorTest.java:11: error: illegal start of expression
        int[] shouldReturn = [1,2];
                             ^
StingCalculatorTest.java:11: error: not a statement
        int[] shouldReturn = [1,2];
                              ^
StingCalculatorTest.java:11: error: ';' expected
        int[] shouldReturn = [1,2];
                               ^
3 errors
